DBZ-3647 Finish initial implementation