@@ -6,24 +6,21 @@
 package io.debezium.connector.jdbc;
 
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import org.apache.kafka.common.config.ConfigDef;
 import org.apache.kafka.connect.connector.Task;
 import org.apache.kafka.connect.sink.SinkConnector;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import io.debezium.annotation.Immutable;
 
+/**
+ * The main connector class used to instantiate configuration and execution classes.
+ *
+ * @author Hossein Torabi
+ */
 public class JdbcSinkConnector extends SinkConnector {
-    private static final Logger LOGGER = LoggerFactory.getLogger(SinkConnector.class);
-
-    public JdbcSinkConnector() {
-    }
 
     @Immutable
     private Map<String, String> properties;
@@ -35,7 +32,7 @@ public class JdbcSinkConnector extends SinkConnector {
 
     @Override
     public void start(Map<String, String> props) {
-        this.properties = Collections.unmodifiableMap(new HashMap<>(props));
+        this.properties = Map.copyOf(props);
     }
 
     @Override
@@ -45,7 +42,6 @@ public class JdbcSinkConnector extends SinkConnector {
 
     @Override
     public List<Map<String, String>> taskConfigs(int maxTasks) {
-        LOGGER.info("Setting task configurations for {} workers.", maxTasks);
         final List<Map<String, String>> configs = new ArrayList<>(maxTasks);
         for (int i = 0; i < maxTasks; ++i) {
             configs.add(properties);
@@ -55,11 +51,11 @@ public class JdbcSinkConnector extends SinkConnector {
 
     @Override
     public void stop() {
-
     }
 
     @Override
     public ConfigDef config() {
         return JdbcSinkConnectorConfig.configDef();
     }
+
 }
